// Template, add newest changes here

=== Beats version HEAD
https://github.com/elastic/beats/compare/v5.3.0...master[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Bugfixes

*Affecting all Beats*


*Filebeat*

- Fix modules default file permissions. {pull}3879[3879]

*Heartbeat*

*Metricbeat*

- Avoid errors when some Apache status fields are missing. {issue}3074[3074]
- Linux cgroup metrics are now enabled by default for the system process
  metricset. The configuration option for the feature was renamed from
  `cgroups` to `process.cgroups.enabled`. {pull}3519[3519]
- Change fieldnames couchbase.node.couch.*.actual_disk_size.* to couchbase.node.couch.*.disk_size.* {pull}3545[3545]

*Packetbeat*

*Winlogbeat*


==== Added

*Affecting all Beats*

- Update index mappings to support future Elasticsearch 6.X. {pull}3778[3778]
- Fix potential elasticsearch output URL parsing error if protocol scheme is missing. {pull}3671[3671]

*Filebeat*

*Heartbeat*

*Metricbeat*
- Add beta Jolokia module. {pull}3844[3844]

*Packetbeat*

*Winlogbeat*

==== Deprecated

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Knwon Issue

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-5.3.0]]
=== Beats version 5.3.0
https://github.com/elastic/beats/compare/v5.2.2...v5.3.0[View commits]

==== Breaking changes

*Affecting all Beats*

- Configuration files must be owned by the user running the Beat or by root, and they must not be writable by others. {pull}3544[3544] {pull}3689[3689]
- Change Beat generator. Use `$GOPATH/src/github.com/elastic/beats/script/generate.py` to generate a beat. {pull}3452[3452]

*Filebeat*
